--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,19 @@
-on: push
-name: FTP to server
-uses: ArWeb-Software-Services/FTP-Swift@v1.0.0
-  with:
-    # FTP server address
-    server: ftp.gb.stackcp.com
-    # FTP username
-    username: theliamforecast.com
-    # FTP password
-    password: {{ secrets.FTP_PASSWORD }}
-    remote-dir: public_html
+on:
+      push:
+        branches:
+          - main
+    name: Deploy website on push
+    jobs:
+      web-deploy:
+        name: Deploy
+        runs-on: ubuntu-latest
+        steps:
+        - name: Get latest code
+          uses: actions/checkout@v3
+    
+        - name: Push files
+          uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+          with:
+            server: ftp.gb.stackcp.com
+            username: theliamforecast.com
+            password: ${{ secrets.FTP_PASSWORD }}
