--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,19 +1,16 @@
-on:
-      push:
-        branches:
-          - main
-    name: Deploy website on push
-    jobs:
-      web-deploy:
-        name: Deploy
-        runs-on: ubuntu-latest
-        steps:
-        - name: Get latest code
-          uses: actions/checkout@v3
+on: push
+name: 🚀 Deploy website on push
+jobs:
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
     
-        - name: Push files
-          uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-          with:
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
             server: ftp.gb.stackcp.com
             username: theliamforecast.com
             password: ${{ secrets.FTP_PASSWORD }}
